@@ -102,6 +102,7 @@ enum {
   PROP_DELETE_WINDOW,
   PROP_DND_PROTOCOL,
   PROP_DND_SELECTION,
+  PROP_EWMH_ICON,
   NUM_PROPS
 };
 
